INCLUDE(SourceFiles.cmake)

IF(WIN32 OR MINGW)
  SET(EXECUTABLE wormux.exe)
ELSE(WIN32 OR MINGW)
  SET(EXECUTABLE wormux)
ENDIF(WIN32 OR MINGW)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${SDL_INCLUDE_DIR} ${SDLIMAGE_INCLUDE_DIR} ${SDLMIXER_INCLUDE_DIR} ${SDLTTF_INCLUDE_DIR} ${SDLGFX_INCLUDE_DIR} ${SDLNET_INCLUDE_DIR} ${LIBXMLPP_INCLUDE_DIR} ${CURL_INCLUDE_DIRS})
ADD_EXECUTABLE (${EXECUTABLE} ${WORMUX_SRCS})
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${SDL_LIBRARY} ${SDLMIXER_LIBRARY} ${SDLTTF_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLGFX_LIBRARY} ${SDLNET_LIBRARY} ${LIBXMLPP_LIBRARY} ${CURL_LIBRARIES})

IF(CMAKE_MAJOR_VERSION MATCHES "2" AND CMAKE_MINOR_VERSION MATCHES "4")
  INSTALL(TARGETS ${EXECUTABLE} RUNTIME DESTINATION bin)
ENDIF(CMAKE_MAJOR_VERSION MATCHES "2" AND CMAKE_MINOR_VERSION MATCHES "4")
IF(CMAKE_MAJOR_VERSION MATCHES "2" AND CMAKE_MINOR_VERSION MATCHES "2")
  INSTALL_TARGETS(/bin FILES ${EXECUTABLE})
ENDIF(CMAKE_MAJOR_VERSION MATCHES "2" AND CMAKE_MINOR_VERSION MATCHES "2")
