SET(EXECUTABLE wormux)

FILE(GLOB_RECURSE WORMUX_SRCS *.cpp *.c)
SET(WORMUX_SRCS ${WORMUX_SRCS} PARENT_SCOPE)

IF(NOT WIN32 AND NOT MSYS)
	LIST(REMOVE_ITEM WORMUX_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/msvc/config.h 
								 ${CMAKE_CURRENT_SOURCE_DIR}/msvc/getopt.c 
								 ${CMAKE_CURRENT_SOURCE_DIR}/msvc/getopt.h
	)
ENDIF(NOT WIN32 AND NOT MSYS)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${SDL_INCLUDE_DIR}
	${SDLIMAGE_INCLUDE_DIR}
	${SDLMIXER_INCLUDE_DIR}
	${SDLTTF_INCLUDE_DIR}
	${SDLGFX_INCLUDE_DIR}
	${SDLNET_INCLUDE_DIR}
	${LIBXML2_INCLUDE_DIR}
	${CURL_INCLUDE_DIRS}
	${PNG_INCLUDE_DIR}
)

ADD_EXECUTABLE(${EXECUTABLE} ${WORMUX_SRCS})
SET_TARGET_PROPERTIES(${EXECUTABLE} PROPERTIES LINK_FLAGS "${WORMUX_LDFLAGS}" COMPILE_FLAGS "${WORMUX_CFLAGS}")

TARGET_LINK_LIBRARIES(
	${EXECUTABLE}
	${SDLIMAGE_LIBRARY}
	${SDLMIXER_LIBRARY}
	${SDLTTF_LIBRARY}
	${SDLGFX_LIBRARY}
	${SDLNET_LIBRARY}
	${LIBXML2_LIBRARIES}
	${CURL_LIBRARIES}
	${PNG_LIBRARY}
	${SDL_LIBRARY}
)

INSTALL(TARGETS ${EXECUTABLE} RUNTIME DESTINATION ${BIN_DESTINATION})

IF(WIN32)
  # These .dll files have to be copied to src/ directory
  INSTALL(FILES
    iconv.dll
    intl.dll
    jpeg.dll
    libcurl-4.dll
    libfreetype-6.dll
    libglib-2.0-0.dll
    libglibmm-2.4-1.dll
    libgmodule-2.0-0.dll
    libgobject-2.0-0.dll
    libpng13.dll
    libsigc-2.0-0.dll
    libxml++-2.6-2.dll
    libxml2.dll
    ogg.dll
    vorbis.dll
    vorbisfile.dll
    SDL.dll
    SDL_gfx.dll
    SDL_image.dll
    SDL_mixer.dll
    SDL_net.dll
    SDL_ttf.dll
    zlib1.dll
    DESTINATION ${BIN_DESTINATION}
  )
ENDIF(WIN32)
