INCLUDE(SourceFiles.cmake)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${SDL_INCLUDE_DIR} ${SDLIMAGE_INCLUDE_DIR} ${SDLMIXER_INCLUDE_DIR} ${SDLTTF_INCLUDE_DIR} ${SDLGFX_INCLUDE_DIR} ${SDLNET_INCLUDE_DIR} ${LIBXMLPP_INCLUDE_DIR})
ADD_EXECUTABLE (wormux ${WORMUX_SRCS})
TARGET_LINK_LIBRARIES(wormux ${SDL_LIBRARY} ${SDLMIXER_LIBRARY} ${SDLTTF_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLGFX_LIBRARY} ${SDLNET_LIBRARY} ${LIBXMLPP_LIBRARY})

INSTALL(TARGETS wormux RUNTIME DESTINATION bin)
