FILE(GLOB_RECURSE WARMUX_INDEX_SERVER_SRCS *.cpp)
SET(EXE warmux-index-server)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib/warmux-server/include )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib/warmux-server )

ADD_EXECUTABLE(${EXE} ${WARMUX_INDEX_SERVER_SRCS})
SET_TARGET_PROPERTIES(${EXE} PROPERTIES LINK_FLAGS "${WARMUX_LDFLAGS}"
                                        COMPILE_FLAGS "${WARMUX_CFLAGS}")

TARGET_LINK_LIBRARIES(${EXE} ${CURL_LIBRARIES} warmux-server)
INSTALL(TARGETS ${EXE} RUNTIME DESTINATION ${BIN_DESTINATION})
