FILE(GLOB_RECURSE WORMUX_INDEX_SERVER_SRCS *.cpp)
SET(EXE wormux-index-server)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib/wormux-server/include )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib/wormux-server )

ADD_EXECUTABLE(${EXE} ${WORMUX_INDEX_SERVER_SRCS})
SET_TARGET_PROPERTIES(${EXE} PROPERTIES LINK_FLAGS "${WORMUX_LDFLAGS}"
                                        COMPILE_FLAGS "${WORMUX_CFLAGS}")

TARGET_LINK_LIBRARIES(${EXE} ${CURL_LIBRARIES} wormux-server)
INSTALL(TARGETS ${EXE} RUNTIME DESTINATION ${BIN_DESTINATION})
